--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     border: none;
   }
   
-  #new-btn {
+  /* #new-btn {
     padding: 1rem;
     font-size: 1.25rem;
     background-color: #191913;
@@ -73,4 +73,4 @@
   
   .hide {
     display: none;
-  }
+  } */
